--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -2,6 +2,7 @@
 
 {% block title %}Hello DashboardController!{% endblock %}
 {% block body %}
+<div id="testeerro"></div>
 <div id="dataChartDebito" data-datachart="{{ arrayDebito | json_encode | raw }}"></div>
 <div id="dataChartCredito" data-datachart="{{ arrayCredito | json_encode | raw }}"></div>
 <div id="dataChartResultado" data-datachart="{{ arrayResultado | json_encode | raw }}"></div>
@@ -19,7 +20,32 @@
             <div class="card-header border-bottom">
                 <h6 class="m-0 font-weight-bold">Contas à Pagar</h6>
             </div>
-            <div class="card-body p-0 text-center mt-3 mx-2">
+            <div class="card-body p-0 mt-3 mx-2">
+            <h3>Agendamemtos:</h3>
+            <table id="tablaagendamentoapagar" class="table table-striped table-bordered">
+                    <thead class="bg-light TableCabecalho">
+                        <tr>
+                            <th scope="col" class="border-0">Data</th>
+                            <th scope="col" class="border-0">Descrção</th> 
+                            <th scope="col" class="border-0">Total</th>                           
+                            <th scope="col" class="border-0"></th>
+                            <th scope="col" class="border-0"></th>
+                        </tr>
+                    </thead>
+                    <tbody class="TableLinha">
+                     {% for lancamento in agendamentosdebito %}                      
+                        <tr>
+                            <td>{{ lancamento.data.format('d/m/Y') }}</td>
+                            <td>{{ lancamento.descricao }}</td>                            
+                            <td>{{ lancamento.total|number_format(2, ',', '.') }}</td>
+                            <td><a href="/agendamentos?id={{lancamento.id}}&debito=1"><i class="fas fa-edit fa-sm"></i></a></td>
+                            <td><a href="#" onclick="deletaagendamento({{lancamento.id}})"><i class="fas fa-trash-alt"></i></a></td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <a href="/agendamentos?debito=1&id=0" class="btn btn-primary">Novo agendamento</a>
+                <h3 class="mt-3">Lançamentos:</h3>
                 <table id="tablecontasapagar" class="table table-striped table-bordered">
                     <thead class="bg-light TableCabecalho">
                         <tr>
@@ -107,7 +133,35 @@
             <div class="card-header border-bottom">
                 <h6 class="m-0 font-weight-bold">Contas à Receber</h6>
             </div>
-            <div class="card-body p-0 text-center mt-3 mx-2">
+            <div class="card-body p-0 mt-3 mx-2">
+            <h3>Agendamemtos:</h3>
+            <table id="tablaagendamentoareceber" class="table table-striped table-bordered">
+                    <thead class="bg-light TableCabecalho">
+                        <tr>
+                            <th scope="col" class="border-0">Data</th>
+                            <th scope="col" class="border-0">Descrção</th> 
+                            <th scope="col" class="border-0">Total</th>                           
+                            <th scope="col" class="border-0"></th>
+                            <th scope="col" class="border-0"></th>
+                        </tr>
+                    </thead>
+                    <tbody class="TableLinha">  
+                    {% for lancamento in agendamentoscredito %}                      
+                        <tr>
+                            <td>{{ lancamento.data.format('d/m/Y') }}</td>
+                            <td>{{ lancamento.descricao }}</td>                            
+                            <td>{{ lancamento.total|number_format(2, ',', '.') }}</td>
+                            <td><a href="/agendamentos?id={{lancamento.id}}&debito=0"><i class="fas fa-edit fa-sm"></i></a></td>
+                            <td><a href="#" onclick="deletaagendamento({{lancamento.id}})"><i class="fas fa-trash-alt"></i></a></td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <a href="/agendamentos?debito=0&id=0" class="btn btn-primary">Novo agendamento</a>
+                <h3 class="mt-3">Lançamentos:</h3>
+
+
+
                 <table id="tablecontasareceber" class="table table-striped table-bordered">
                     <thead class="bg-light TableCabecalho">
                         <tr>
@@ -328,6 +382,66 @@
         </div>
     </div>
 </div>
+
+<!-- Delete Modal-->
+<div class="modal fade" id="deleteLancamentoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Tem cetreza que deseja excluir esse Lançamento?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+
+            <div class="col-sm-12 col-md-12">
+                <form class="mt-3" id="formulariolancamento">
+                    <input type="hidden" id="idlancamentodelete" name="idlancamentodelete" value="">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <div id="lancdata"></div>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <div id="lancdatapag"></div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <div id="lancidconta"></div>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <div id="lanciccentrodecusto"></div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <div id="lancnotafiscal"></div>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <div id="lancvalor"></div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <div id="lancdescricao"></div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+                <a class="btn btn-primary" href="#" onclick="deletalancamento()">Ok</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    
+    
+
+</script>
 
 
 {% endblock %}
