--- a/templates/baseSistema.html.twig
+++ b/templates/baseSistema.html.twig
@@ -117,6 +117,12 @@
                     <i class="fas fa-fw fa-table"></i>
                     <span>Fluxo de Caixa</span></a>
             </li>
+             <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="/pagarreceber">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Contas a Pagar/Receber</span></a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <!-- Sidebar Toggler (Sidebar) -->
