--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -10,7 +10,42 @@
 <div id="dataChartpieValores" data-datachart="{{ chartpieValores | json_encode }}"></div>
 <div id="dataChartpieLabels" data-datachart="{{ chartpieLabels | json_encode }}"></div>
 
+<div id="dataCharFluxoData" data-datachart="{{ graficoFluxoData | json_encode }}"></div>
+<div id="dataCharFluxoDebito" data-datachart="{{ graficoFluxoDebito | json_encode }}"></div>
+<div id="dataCharFluxoCredito" data-datachart="{{ graficoFluxoCredito | json_encode }}"></div>
+<div id="dataCharFluxoSaldo" data-datachart="{{ graficoFluxoSaldo | json_encode }}"></div>
 
+
+
+<div class="row d-none">
+    <!-- Users Stats -->
+    <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
+        <div class="card card-small">
+            <div class="card-header border-bottom">
+                <div class="row">                                   
+                    <div class="col-md-10">
+                        <h6 class="mt-2 font-weight-bold">Fluxo de Caixa</h6>
+                    </div>                                    
+                    <div class="col-md-2"> 
+                        <select id="graficoano" name="idconta" class="form-control" required>
+                            <option value="" disabled selected>Mês</option>                                            
+                            <option value="{{ chartbarAno }}">{{ chartbarAno }}</option>                                           
+                        </select>          
+                    </div>                       
+                </div>                   
+            </div>
+            <div class="card-body pt-0">
+                <div class="chart-bar">
+                    <canvas id="ChartFluxo"></canvas>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- End Users Stats -->
+    
+
+</div>
 <!-- Content Row -->
 <div class="row"> 
     <!-- Card de Contas à Pagar -->
@@ -21,7 +56,7 @@
                 <h6 class="m-0 font-weight-bold">Contas à Pagar</h6>
             </div>
             <div class="card-body p-0 mt-3 mx-2">
-            <h3>Agendamemtos:</h3>
+            <h3>Agendamentos:</h3>
             <table id="tablaagendamentoapagar" class="table table-striped table-bordered">
                     <thead class="bg-light TableCabecalho">
                         <tr>
@@ -134,7 +169,7 @@
                 <h6 class="m-0 font-weight-bold">Contas à Receber</h6>
             </div>
             <div class="card-body p-0 mt-3 mx-2">
-            <h3>Agendamemtos:</h3>
+            <h3>Agendamentos:</h3>
             <table id="tablaagendamentoareceber" class="table table-striped table-bordered">
                     <thead class="bg-light TableCabecalho">
                         <tr>
