--- a/templates/agendamentos/index.html.twig
+++ b/templates/agendamentos/index.html.twig
@@ -1,6 +1,46 @@
 {% extends 'baseSistema.html.twig' %}
 
 {% block body %}
+<div class="row">
+    <!-- Card de Contas à Pagar -->
+    <div class="col-xl-12 col-md-12 mb-4">
+        <div class="card shadow">
+         <div class="card-header border-bottom">
+                <h6 class="m-0 font-weight-bold">Período</h6>
+            </div>
+               
+                    <!-- Inicio da Table -->
+                    <div class="card-body p-0 text-center">
+                        <div class="col-sm-12 col-md-12">
+                            <form class="mt-3" id="formulariolancamento">
+                                <div class="form-group row">
+                                    <label for="datainicial" class="col-sm-2 col-form-label">Data Inicial</label>
+                                    <div class="col-sm-3">
+                                        <input id="datainicial" name="datainicial" class="form-control" type="date"
+                                        value="{{filtroDataInicaial}}" required>
+                                    </div>
+                                    <label for="datafinal" class="col-sm-2 col-form-label">Data Final</label>
+                                    <div class="col-sm-3">
+                                        <input id="datafinal" name="datafinal" class="form-control" type="date"
+                                        value="{{filtroDataFinal}}" required>
+                                    </div>     
+                                    <a href="#" class="btn btn-primary ml-2" onclick="filtroagenda({{tipo}},{{agendamento.id}})">Ok</a>
+                                </div>
+
+                                
+                                
+                        </div>
+                        
+                        </form>
+                    </div>
+                    <!-- fim Table -->
+               
+
+                
+           
+        </div>
+    </div>
+</div>
 <!-- Content Row -->
 <div class="row">
     <!-- Card de Contas à Pagar -->
@@ -17,34 +57,33 @@
                             <th scope="col" class="border-0"></th>
                             <th scope="col" class="border-0">Data</th>
                             <th scope="col" class="border-0">Descrção</th>
-                            <th scope="col" class="border-0">Conta</th>
-                            <th scope="col" class="border-0"></th>
+                            <th scope="col" class="border-0">Conta</th>                            
                             <th scope="col" class="border-0">Valor (R$)</th>
-                            <th scope="col" class="border-0"></th>
-                            <th scope="col" class="border-0"></th>
+                            <th scope="col" class="border-0"></th>                            
                         </tr>
                     </thead>
                     <tbody class="TableLinha">
                         {% for lancamento in listapendentes %}
                         <tr>
-                            <td>
-                                <div class="checkbox">
-                                    <label><input type="checkbox" id="{{ lancamento.id }}" onclick="additemagenda(
-                                        '{{ lancamento.id }}',
-                                        '{{ lancamento.data.format('d/m/Y')}}',
-                                        '{{ lancamento.descricao }}',
-                                        '{{ lancamento.valor|number_format(2, ',', '.') }}')"></label>
-                                </div>
+                            <td><label onclick="additemagenda(
+                                '{{lancamento.id}}',
+                                '{{lancamento.data.format('Y-m-d')}}',
+                                '{{(lancamento.datapag != null) ? lancamento.datapag.format('Y-m-d') : "" }}',
+                                '{{lancamento.idconta.id}}',
+                                '{{lancamento.iccentrodecusto.id}}',
+                                '{{lancamento.notafiscal}}',
+                                '{{lancamento.descricao}}',
+                                '{{lancamento.valor|number_format(2, ',', '.')}}',
+                                '{{lancamento.debito}}',
+                                '{{lancamento.previsao}}',
+                                '{{(lancamento.valorpago != null) ? lancamento.valorpago|number_format(2, ',', '.') : "" }}',
+                                true
+                            )">
+                                <i class="fa fa-plus" aria-hidden="true"></i></label>                        
                             </td>
                             <td>{{ lancamento.data.format('d/m/Y')}}</td>
                             <td>{{ lancamento.descricao }}</td>
-                            <td>{{ lancamento.idconta.nome }}</td>
-                            <td>{% if lancamento.previsao == true %}
-                                <i class="fas fa-exclamation-triangle"></i>
-                                {% else %}
-                                <i class="fas fas fa-check"></i>
-                                {% endif %}
-                            </td>
+                            <td>{{ lancamento.idconta.nome }}</td>                            
                             <td>{{ lancamento.valor|number_format(2, ',', '.') }}</td>
                             <td>
                                 <a href="#" data-toggle="modal" data-target="#editLancamentoModal" onclick="setaModalEditlancamento(
@@ -63,21 +102,7 @@
                                                     )">
                                     <i class="fas fa-edit fa-sm"></i>
                                 </a>
-                            </td>
-                            <td>
-                                <a href="#" data-toggle="modal" data-target="#deleteLancamentoModal" onclick="setaModalDeletLancamento(
-                                                        '{{lancamento.id}}',
-                                                        '{{lancamento.data.format('d/m/Y')}}',
-                                                        '{{(lancamento.datapag != null) ? lancamento.datapag.format('d/m/Y') : "" }}',
-                                                        '{{lancamento.idconta.nome}}',
-                                                        '{{lancamento.iccentrodecusto.nome}}',
-                                                        '{{lancamento.notafiscal}}',
-                                                        '{{lancamento.descricao}}',
-                                                        '{{lancamento.valor|number_format(2, ',', '.')}}'
-                                                        )">
-                                    <i class="fas fa-trash-alt"></i>
-                                </a>
-                            </td>
+                            </td>                            
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -113,21 +138,46 @@
                     <table id="tablaagendamento" class="table table-striped table-bordered">
                         <thead class="bg-light TableCabecalho">
                             <tr>
+                                <th scope="col" class="border-0"></th>
                                 <th scope="col" class="border-0">id</th>
                                 <th scope="col" class="border-0">Data</th>
                                 <th scope="col" class="border-0">Descrção</th>
                                 <th scope="col" class="border-0">Total</th>
+                                <th scope="col" class="border-0">{{app.request.get('datainicial')}}</th>  
                             </tr>
                         </thead>
                         <tbody class="TableLinha">
+                        {% if app.request.get('datainicial') == "" %}
                         {% for lancamento in listaitensagenda %}                      
                             <tr>
+                                <td><label onclick="deleteitemagenda(
+                                    '{{ lancamento.id }}')"><i class="fa fa-minus" aria-hidden="true"></i></label>
+                                </td>
                                 <td>{{ lancamento.id }}</td>
                                 <td>{{ lancamento.data.format('d/m/Y') }}</td>
                                 <td>{{ lancamento.descricao }}</td>                            
                                 <td>{{ lancamento.valor|number_format(2, ',', '.') }}</td>                                
-                            </tr>
+                                <td>
+                                    <a href="#" data-toggle="modal" data-target="#editLancamentoModal" onclick="setaModalEditlancamento(
+                                                            '{{lancamento.id}}',
+                                                            '{{lancamento.data.format('Y-m-d')}}',
+                                                            '{{(lancamento.datapag != null) ? lancamento.datapag.format('Y-m-d') : "" }}',
+                                                            '{{lancamento.idconta.id}}',
+                                                            '{{lancamento.iccentrodecusto.id}}',
+                                                            '{{lancamento.notafiscal}}',
+                                                            '{{lancamento.descricao}}',
+                                                            '{{lancamento.valor|number_format(2, ',', '.')}}',
+                                                            '{{lancamento.debito}}',
+                                                            '{{lancamento.previsao}}',
+                                                            '{{(lancamento.valorpago != null) ? lancamento.valorpago|number_format(2, ',', '.') : "" }}',
+                                                            true
+                                                        )">
+                                        <i class="fas fa-edit fa-sm"></i>
+                                    </a>
+                                </td>                                                          
+                            </tr>                           
                         {% endfor %}
+                        {% endif %}
 
                         </tbody>
                     </table>
@@ -136,7 +186,7 @@
 
                         </div>
                         <div class="d-flex flex-row-reverse m-0 font-weight-bold">
-                            <div id="totaltexto">{{agendamento.total|number_format(2, ',', '.')}}</div><a>Total: R$&nbsp;</a>
+                            <div id="totaltexto">{{ saldo|number_format(2, ',', '.') }}</div><a>Total: R$&nbsp;</a>
                         </div>
                     </div>
                     
@@ -146,6 +196,95 @@
         </div>
     </div>
 </div>
+
+<!-- Edit Modal-->
+<div class="modal fade" id="editLancamentoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Editar Lançamento?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+
+            <div class="col-sm-12 col-md-12">
+                <form method="POST" class="mt-3" id="formularioeditlancamento">
+                    <div class="form-row">
+                        <input type="hidden" id="userid_id" name="userid_id" value="2">
+                        <input type="hidden" id="editdataedicao" name="dataedicao" value="2019-05-26">
+                        <div class="form-group col-md-6">
+                            <input id="editdata" name="data" class="form-control" type="date" required>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <select onchange="toggle_form_element(this,'modal')" id="editprevisao" name="previsao"
+                                class="form-control" required>
+                                <option value="" disabled selected>Tipo</option>
+                                <option value="1">Previsão</option>
+                                <option value="0">Consolidado</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <select id="editidconta" name="idconta" class="form-control" required>
+                                <option value="" disabled selected>Conta</option>
+                                {% for contacorrente in listacontacorrente %}
+                                <option value="{{contacorrente.id}}">{{contacorrente.nome}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <select id="editcentrodecusto" name="idcentrodecusto" class="form-control" required>
+                                <option value="" disabled selected>Centro de Custo</option>
+                                {% for centrodecustos in listacentrodecustos %}
+                                <option value="{{centrodecustos.id}}">{{centrodecustos.nome}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <input id="editnotafiscal" name="notafiscal" type="text" class="form-control"
+                                placeholder="Nota Fiscal">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <input type="text" name="valor" class="form-control" id="editvalor" placeholder="Valor R$"
+                                required>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <div class="my-auto d-flex justify-content-around">
+                                <input type="radio" id="editdebito" name="debito" value="1" required> Débito
+                                <input type="radio" id="editdebito" name="debito" value="0"> Crédito
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <input id="editdescricao" name="descricao" type="text" class="form-control"
+                                placeholder="Descrição" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6" style="display: none" id="editformbaixa">
+                            <input class="form-control" name="datapag" type="date" placeholder="Data do Pagamento"
+                                value="" id="editdatapag">
+                        </div>
+                        <div class="form-group col-md-6" style="display: none" id="editformbaixa1">
+                            <input id="editvalorpago" name="valorpago" type="text" class="form-control"
+                                placeholder="Valor Pago R$">
+                        </div>
+                    </div> 
+            </div>
+            <div class="modal-footer">
+                <button type="submit" id="submitnovocentrocusto" class="btn btn-primary">Salvar</button>
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 
 
 
