--- a/templates/baseSistema.html.twig
+++ b/templates/baseSistema.html.twig
@@ -224,6 +224,7 @@
     <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.18/js/dataTables.bootstrap4.min.js"></script>
     <script src="{{ asset('js/demo/datatables-demo.js') }}"></script>
+    <script src="{{ asset('js/agenda.js') }}"></script>
     {% endblock %}
 </body>
 
