Inclusão de Fluxo de Caixa

--- a/templates/baseSistema.html.twig
+++ b/templates/baseSistema.html.twig
@@ -219,7 +219,8 @@
     <!-- Page level custom scripts -->
     <script src="{{ asset('js/demo/chart-area-demo.js') }}"></script>
     <script src="{{ asset('js/demo/chart-pie-demo.js') }}"></script>
-    <script src="{{ asset('js/demo/chart-bar-demo.js') }}"></script>
+    <script src="{{ asset('js/chartFluxo.js') }}"></script>
+    <script src="{{ asset('js/chartResultado.js') }}"></script>
     <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.18/js/dataTables.bootstrap4.min.js"></script>
