--- a/templates/extrato/index.html.twig
+++ b/templates/extrato/index.html.twig
@@ -2,9 +2,10 @@
 
 {% block body %}
 <div class="row">
-<div class="col-sm-12 col-xl-12 col-md-12 mb-4">
-    <button id="bot1" type="submit" class="btn btn-primary" >Novo Lançamento</button>
-</div>
+    <div class="col-sm-12 col-xl-12 col-md-12 mb-4">
+        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#novoLancamentoModal">Novo Lançamento</a>
+        
+    </div>
 </div>
 <div class="row">
     <!-- Card de Contas à Pagar -->
