--- a/templates/agendamentos/index.html.twig
+++ b/templates/agendamentos/index.html.twig
@@ -143,7 +143,7 @@
                                 <th scope="col" class="border-0">Data</th>
                                 <th scope="col" class="border-0">Descrção</th>
                                 <th scope="col" class="border-0">Total</th>
-                                <th scope="col" class="border-0">{{app.request.get('datainicial')}}</th>  
+                                <th scope="col" class="border-0"></th>  
                             </tr>
                         </thead>
                         <tbody class="TableLinha">
