--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,6 +1,5 @@
 {% extends 'baseSistema.html.twig' %}
 
-{% block title %}Hello DashboardController!{% endblock %}
 {% block body %}
 <div id="testeerro"></div>
 <div id="dataChartDebito" data-datachart="{{ arrayDebito | json_encode | raw }}"></div>
@@ -17,7 +16,7 @@
 
 
 
-<div class="row d-none">
+<div class="row">
     <!-- Users Stats -->
     <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
         <div class="card card-small">
@@ -50,7 +49,7 @@
 <div class="row"> 
     <!-- Card de Contas à Pagar -->
     <div class="col-xl-6 col-md-6 mb-4">
-        <div class="card border-left-danger shadow" style="min-height: 30rem;">
+        <div class="card border-left-danger shadow" style="height: 25rem;">
             <!-- Inicio da Table -->
             <div class="card-header border-bottom">
                 <h6 class="m-0 font-weight-bold">Contas à Pagar</h6>
@@ -91,7 +90,7 @@
 
     <!-- Card de Contas à Receber -->
     <div class="col-xl-6 col-md-6 mb-4">
-        <div class="card border-left-success shadow" style="min-height: 30rem;">
+        <div class="card border-left-success shadow" style="height: 25rem;">
             <!-- Inicio da Table -->
             <div class="card-header border-bottom">
                 <h6 class="m-0 font-weight-bold">Contas à Receber</h6>
